# PeSANet

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: gray_scott_2d.yaml
docs/: model_notes.md
examples/: smoke_forward.py  train_from_npy.py
peasnet/: __init__.py
peasnet/data/: __init__.py  sequence_dataset.py
peasnet/evaluation/: __init__.py  metrics.py
peasnet/models/: __init__.py  kno.py  peasnet.py
peasnet/training/: __init__.py  loops.py
tests/: test_examples.py  test_smoke_forward.py
