[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peasnet"
version = "0.1.0"
description = "PeSANet model code for 2D Gray-Scott dynamics."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "torch>=1.12",
]

[tool.setuptools.packages.find]
include = ["peasnet*"]
